# BriskAudio

./: BriskAudio.h  BriskAudio.hpp  BriskAudioLinux.cpp  BriskAudioLinux.h  BriskAudioWindows.cpp  BriskAudioWindows.hpp  CMakeLists.txt  LICENSE  Readme.md  Test.cpp  test.c
.github/workflows/: clang-format.yml  codeql-analysis.yml  main.yml
BriskAudio/: BriskAudio.sln  BriskAudio.vcxproj  BriskAudio.vcxproj.filters
BriskAudio/Debug/: BriskAudio.exe.recipe  BriskAudio.ilk  BriskAudio.vcxproj.FileListAbsolute.txt  vc142.idb
BriskAudio/Debug/BriskAudio.tlog/: BriskAudio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: BriskAudio.hpp
src/: BriskAudio.hpp  BriskAudioLinux.cpp  BriskAudioWindows.cpp  BriskAudioWindows.hpp  Test.cpp
